--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@400;700&family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./app/css/style.css">
-    <title>WEB-EXAM</title>
+    <title>Shopify</title>
 </head>
 <body>
     <nav class="nav">
